tests/runtime/handler.m31.ref
File "./runtime/handler.m31", line 9, characters 32-41:
Type error: unknown name base.print
