tests/runtime/handler.m31
operation auto : mlunit -> judgement ;;
rule A type ;;
rule a : A ;;
rule B type ;;

handle
  auto () : A
with
| auto () : ML.Some (? : X) -> yield a
| auto () : ML.None -> yield B
end ;;

handle
  auto ()
with
| auto () : ML.Some (? : X) -> yield a
| auto () : ML.None -> yield B
end